--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,23 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Game Tracker</title>
-</head>
-<body>
+<link rel="stylesheet" href="/css/style.css">
+
+<header>
+  <h1>Welcome to Game Tracker!</h1>
+  <p>Keep track of all your game achievements and progress in one place.</p>
   {{#if user}}
-    <h1>Welcome, {{user.name}}!</h1>
+    <a href="/achievements/dashboard"><button>Go to Dashboard</button></a>
   {{else}}
-    <h1>Welcome, Guest!</h1>
+    <a href="/users/register"><button>Get Started</button></a>
+    <a href="/users/login"><button>Login</button></a>
   {{/if}}
+</header>
 
-  {{#if success_msg}}
-    <p style="color:green">{{success_msg}}</p>
-  {{/if}}
-  {{#if error_msg}}
-    <p style="color:red">{{error_msg}}</p>
-  {{/if}}
-
-  <p><a href="/achievements">View Achievements</a></p>
-  <p><a href="/users/login">Login</a> | <a href="/users/register">Register</a></p>
-</body>
-</html>
+<div class="container">
+  <div class="features">
+    <div class="feature-card">
+      <h3>Track Achievements</h3>
+      <p>Easily add and manage achievements for all your games.</p>
+    </div>
+    <div class="feature-card">
+      <h3>Visual Progress</h3>
+      <p>See your game progress with charts and stats.</p>
+    </div>
+    <div class="feature-card">
+      <h3>Stay Organized</h3>
+      <p>Manage all your achievements in one simple dashboard.</p>
+    </div>
+  </div>
+</div>
