--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Login - Game Tracker</title>
-</head>
-<body>
-  <h1>Login</h1>
+<link rel="stylesheet" href="/css/style.css">
 
-  {{#if error}}
-    <p style="color:red">{{error}}</p>
-  {{/if}}
-  {{#if success_msg}}
-    <p style="color:green">{{success_msg}}</p>
-  {{/if}}
+<div class="auth-container">
+  <div class="auth-card">
+    <h2>Login</h2>
 
-  <form action="/users/login" method="POST">
-    <div>
-      <label>Email:</label>
-      <input type="email" name="email" required>
-    </div>
-    <div>
-      <label>Password:</label>
-      <input type="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-  </form>
+    {{#if error}}
+      <div class="error-msg">{{error}}</div>
+    {{/if}}
 
-  <p><a href="/users/register">Register</a> | <a href="/">Home</a></p>
-</body>
-</html>
+    {{#if success_msg}}
+      <div style="color:green;text-align:center;margin-bottom:1rem;">{{success_msg}}</div>
+    {{/if}}
+
+    <form action="/users/login" method="POST">
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+
+    <p>Don't have an account? <a href="/users/register">Register</a></p>
+  </div>
+</div>
