--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/stylesheets/style.css">
 
 <header>
   <h1>Welcome to Game Tracker!</h1>
@@ -16,10 +16,6 @@
     <div class="feature-card">
       <h3>Track Achievements</h3>
       <p>Easily add and manage achievements for all your games.</p>
-    </div>
-    <div class="feature-card">
-      <h3>Visual Progress</h3>
-      <p>See your game progress with charts and stats.</p>
     </div>
     <div class="feature-card">
       <h3>Stay Organized</h3>
